link 3D Models Free

--- a/my/paginas/3d/index.html
+++ b/my/paginas/3d/index.html
@@ -39,6 +39,21 @@
             <a class="resource-button" href="https://sketchfab.com/" target="_blank">Veja</a>
          </li>
 
+         <li>
+            <div class="resource-icon">
+                <a href="https://www.hongkiat.com/blog/60-excellent-free-3d-model-websites/" target="_blank">
+                    <img src="../../base/images/portfolios.jpg" alt="#" />
+                </a>
+            </div>
+            <div class="resource-details">
+                <h2>
+                    <a href="https://www.hongkiat.com/blog/60-excellent-free-3d-model-websites/" target="_blank">Free 3D Models</a>
+                </h2>
+                <p>50 Sites to Download Free 3D Models – Best Of</p>
+            </div>
+            <a class="resource-button" href="https://www.hongkiat.com/blog/60-excellent-free-3d-model-websites/" target="_blank">Veja</a>
+         </li>
+
  
 
     </ul>
