--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -115,6 +115,21 @@
         </div>
         <a class="resource-button" href="http://museum.php.net/" target="_blank">Veja</a>
       </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://cdnjs.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://cdnjs.com/" target="_blank">CDNJS</a>
+          </h2>
+          <p>Site para procurar livrarias de diferentes versões</p>
+        </div>
+        <a class="resource-button" href="https://cdnjs.com/" target="_blank">Veja</a>
+      </li>
   
       <li>
         <div class="resource-icon">
