links de apoio Front and UX

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -871,6 +871,22 @@
         </div>
         <a class="resource-button" href="https://html.spec.whatwg.org/multipage/semantics.html#semantics" target="_blank">Veja</a>
       </li>
+      
+      <li>
+        <div class="resource-icon">
+          <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/446356636710363136/OYIaJ1KK_400x400.png" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank">Tutorial React</a>
+          </h2>
+          <p>Apoio em React</p>
+        </div>
+        <a class="resource-button" href="https://reactjs.org/tutorial/tutorial.html" target="_blank">Veja</a>
+      </li>
+
 
       <!-- <li>
         <div class="resource-icon">
