--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -262,6 +262,21 @@
         </div>
         <a class="resource-button" href="https://xtensio.com/user-persona/" target="_blank">Veja</a>
       </li>
+      
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.strawpoll.me/" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/737742455643070465/yNKcnrSA_400x400.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.strawpoll.me/" target="_blank">Straw Pool</a>
+          </h2>
+          <p>Para fazer votação</p>
+        </div>
+        <a class="resource-button" href="https://www.strawpoll.me/" target="_blank">Veja</a>
+      </li>
 
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Tips &amp; Tricks</h2>
@@ -310,6 +325,81 @@
           <p>Design + Code</p>
         </div>
         <a class="resource-button" href="https://designcode.io/sketch" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://webdesign.tutsplus.com/pt/tutorials/how-to-create-a-ui-prototype-using-adobe-xd--cms-26585" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/671588461833560064/oi7JDvPR_400x400.png" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://webdesign.tutsplus.com/pt/tutorials/how-to-create-a-ui-prototype-using-adobe-xd--cms-26585" target="_blank">Como Criar um Protótipo de UI <br>Usando Adobe XD</a>
+          </h2>
+          <p>Envatotuts+</p>
+        </div>
+        <a class="resource-button" href="https://webdesign.tutsplus.com/pt/tutorials/how-to-create-a-ui-prototype-using-adobe-xd--cms-26585" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://brasil.uxdesign.cc/meu-checklist-de-tarefas-para-um-teste-de-usabilidade-2c5e552ce259" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/982990409453334529/Mrnz3KJ6_400x400.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://brasil.uxdesign.cc/meu-checklist-de-tarefas-para-um-teste-de-usabilidade-2c5e552ce259" target="_blank">Meu checklist de tarefas para <br> um teste de usabilidade</a>
+          </h2>
+          <p>Guilherme Gonzalez - UX Collective</p>
+        </div>
+        <a class="resource-button" href="https://brasil.uxdesign.cc/meu-checklist-de-tarefas-para-um-teste-de-usabilidade-2c5e552ce259" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://designmodo.com/repeat-grid-adobe-xd/" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/985889277652455425/llwBE2xU_400x400.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://designmodo.com/repeat-grid-adobe-xd/" target="_blank">6 Creative Ways to Use Repeat <br>Grids in Adobe XD</a>
+          </h2>
+          <p>Designmodo</p>
+        </div>
+        <a class="resource-button" href="https://designmodo.com/repeat-grid-adobe-xd/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://material.io/design/components/bottom-navigation.html#behavior" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/925576484122779648/ucVTUoPg_400x400.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://material.io/design/components/bottom-navigation.html#behavior" target="_blank">Bottom Navigation Behavior</a>
+          </h2>
+          <p>Material Design</p>
+        </div>
+        <a class="resource-button" href="https://material.io/design/components/bottom-navigation.html#behavior" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://developer.apple.com/design/human-interface-guidelines/ios/bars/tab-bars/" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/906757285145227264/k-kE4Bg0_400x400.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://developer.apple.com/design/human-interface-guidelines/ios/bars/tab-bars/" target="_blank">Tab bars</a>
+          </h2>
+          <p>Human Interface Guidelines - Apple Developer</p>
+        </div>
+        <a class="resource-button" href="https://developer.apple.com/design/human-interface-guidelines/ios/bars/tab-bars/" target="_blank">Veja</a>
       </li>
 
       <div class="linha"></div>
