--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -306,6 +306,20 @@
 				<div id="cores"></div>
 			</li>
 
+			<li>
+				<div class="resource-icon">
+					<a href="ttp://www.cufonfonts.com/font/bariol-regular-2" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="Canva Fonts Combinations" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="http://www.cufonfonts.com/font/bariol-regular-2" target="_blank">Cufon Fonts</a> </h2>
+					<p>Web fonts &amp; e download</p>
+				</div>
+				<a class="resource-button" href="http://www.cufonfonts.com/font/bariol-regular-2" target="_blank">Veja</a>
+				<div id="cores"></div>
+			</li>
+
 			<div class="linha"></div>
 			<h2 class="margen-titulo color-apoio">Cores</h2>
 			<div class="linha"></div>
