inserindo links de apoio ao estudo

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1531,6 +1531,51 @@
       
       <li>
         <div class="resource-icon">
+          <a href="https://www.codecademy.com" target="_blank">
+            <img src="https://production.cdmycdn.com/webpack/44e01805165bfde4e6e4322c540abf81.svg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.codecademy.com" target="_blank">Code Academy</a>
+          </h2>
+          <p>Learning Code</p>
+        </div>
+        <a class="resource-button" href="https://www.codecademy.com" target="_blank">Veja</a>   
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://learn.freecodecamp.org" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/692531829287567360/ytP7U362_400x400.png" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://learn.freecodecamp.org" target="_blank">Free Code Camp</a>
+          </h2>
+          <p>Learning Code</p>
+        </div>
+        <a class="resource-button" href="https://learn.freecodecamp.org" target="_blank">Veja</a>   
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.sololearn.com" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/378800000242038210/3c561ae8a8bbf4d8f7c3428e49a92e51_400x400.png" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.sololearn.com" target="_blank">SoloLearn</a>
+          </h2>
+          <p>Learning Code</p>
+        </div>
+        <a class="resource-button" href="https://www.sololearn.com" target="_blank">Veja</a>   
+      </li>
+      
+      <li>
+        <div class="resource-icon">
           <a href="https://jsfiddle.net/" target="_blank">
             <img src="../../base/images/fiddle.jpg" alt="#" />
           </a>
@@ -1627,7 +1672,7 @@
         </div>
         <div class="resource-details">
           <h2>
-            <a href="https://willianjusten.com.br/dominio-proprio-no-github-pages/" target="_blank">Como ter Domínio Proprio no Github Pages</a>
+            <a href="https://willianjusten.com.br/dominio-proprio-no-github-pages/" target="_blank">Como ter Domínio Próprio no Github Pages</a>
           </h2>
           <p>O passo a passo para deixar seu blog com seu domínio.</p>
         </div>
