links Grid Garden game, Screen Sizes

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -239,7 +239,7 @@
           <h2>
             <a href="http://blog.caelum.com.br/comecando-a-organizar-seu-css/" target="_blank">Modelos de arquitetura de CSS</a>
           </h2>
-          <p><mark><a href="http://getbem.com/introduction/" target="_blank">BEM</a></mark>, <mark><a href="http://oocss.org/" target="_blank">OOCSS</a></mark>, DRY CSS, SMACSS, Atomic Design</p>
+          <p><mark><a href="http://getbem.com/introduction/" target="_blank">BEM</a></mark>, <mark><a href="http://oocss.org/" target="_blank">OOCSS</a></mark>, <mark><a href="http://rscss.io/" target="_blank">RSCSS</a></mark>, DRY CSS, SMACSS, Atomic Design</p>
         </div>
         <a class="resource-button" href="http://blog.caelum.com.br/comecando-a-organizar-seu-css/" target="_blank">Veja</a>
         <div id="bibliotecas"></div>
@@ -694,6 +694,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">
+            <img src="../../base/images/css-tricks.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">CSS Tricks | Grid</a>
+          </h2>
+          <p>Guia de desenvolvimento | Games: <a href="http://cssgridgarden.com/" target="_blank"><strong style="background-color:#265973; color: white; padding: 3px;">Grid Garden</strong></a> </p>
+        </div>
+        <a class="resource-button" href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="http://htmlreference.io/" target="_blank">
             <img src="../../base/images/htmlReference.jpg" alt="#" />
           </a>
@@ -966,6 +981,21 @@
         </div>
         <a class="resource-button" href="https://weblaunchchecklist.com/" target="_blank">Veja</a>
   		</li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.styled-components.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.styled-components.com/" target="_blank">Styled Components</a>
+          </h2>
+          <p>Use the best bits of ES6 and CSS to style your apps without stress</p>
+        </div>
+        <a class="resource-button" href="https://www.styled-components.com/" target="_blank">Veja</a>
+      </li>
 
       <li>
         <div class="resource-icon">
