--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -440,6 +440,21 @@
         <a class="resource-button" href="https://material.io/design/" target="_blank">Veja</a>
       </li> 
 
+      <li>
+        <div class="resource-icon">
+          <a href="http://screensiz.es" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://screensiz.es" target="_blank">Screen Sizes</a>
+          </h2>
+          <p>Tamanhos de tela organizado por device, tamanho de tela, <br>
+            pixel, densidade de pixel e aspecto radio</p>
+        </div>
+        <a class="resource-button" href="http://screensiz.es" target="_blank">Veja</a>
+      </li> 
 
     </ul>
       <ul class="sidebar-navigation">
