--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -403,6 +403,36 @@
 
       <li>
         <div class="resource-icon">
+          <a href="https://bulma.io/" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/690988958860316672/xFkgPktt_400x400.png" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://bulma.io/" target="_blank">Bulma</a>
+          </h2>
+          <p>Framework | Based on Flexbox</p>
+        </div>
+        <a class="resource-button" href="https://bulma.io/" target="_blank">Veja</a>
+      </li>
+      
+      <li>
+        <div class="resource-icon">
+          <a href="http://jeet.gs/" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/451070890273292288/5bS2enZw_400x400.png" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://jeet.gs/" target="_blank">Jeet</a>
+          </h2>
+          <p>A grid System for Human</p>
+        </div>
+        <a class="resource-button" href="http://jeet.gs/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://prismjs.com" target="_blank">
             <img src="https://pbs.twimg.com/profile_images/2451426554/Screen_Shot_2012-07-31_at_21.57.03__400x400.png" alt="#" />
           </a>
