--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -265,6 +265,36 @@
       
       <li>
         <div class="resource-icon">
+          <a href="https://zeplin.io/" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/926163770497384448/ebRtDqs2_400x400.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://zeplin.io/" target="_blank">Zeplin</a>
+          </h2>
+          <p>Conexão entre Designers e Desenvolvedores</p>
+        </div>
+        <a class="resource-button" href="https://zeplin.io/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.awwwards.com/websites/" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/994433954538176512/9w1IQjMM_400x400.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.awwwards.com/websites/" target="_blank">Awwwards</a>
+          </h2>
+          <p>Site que avalia seu projeto seguindo critérios de Design, Usabilidade, Criatividade e Conteúdo </p>
+        </div>
+        <a class="resource-button" href="https://www.awwwards.com/websites/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://www.strawpoll.me/" target="_blank">
             <img src="https://pbs.twimg.com/profile_images/737742455643070465/yNKcnrSA_400x400.jpg" alt="#" />
           </a>
