link do site de animação | animista

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -572,6 +572,22 @@
         <div id="zoom"></div>
       </li>  
 
+      <li>
+        <div class="resource-icon">
+          <a href="http://animista.net" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://animista.net" target="_blank">Animista</a>
+          </h2>
+          <p>Animation</p>
+        </div>
+        <a class="resource-button" href="http://animista.net/" target="_blank">Veja</a>
+        <div id="zoom"></div>
+      </li>  
+
 
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Zoom | Modal | Popup</h2>
