--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -247,6 +247,21 @@
         </div>
         <a class="resource-button" href="https://diverseui.com/" target="_blank">Veja</a>
       </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.repeatgrid.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.repeatgrid.com/" target="_blank">Sample .txt for AdobeXD Repeat Grid</a>
+          </h2>
+          <p>Cria listas genéricas para teste, gerando .txt | First Name, Full Name, Email, URL, Paragraph, DD/MM/YYYY, Username, Address</p>
+        </div>
+        <a class="resource-button" href="https://www.repeatgrid.com/" target="_blank">Veja</a>
+      </li>
       
       <li>
         <div class="resource-icon">
