acrescentando e organizando links

--- a/my/index.html
+++ b/my/index.html
@@ -78,7 +78,7 @@
             <div class="card-icon">
               <div><i class="fa fa-laptop fa-5x" aria-hidden="true"></i></div> 
             </div>
-            <h2><strong>UX</strong></h2>
+            <h2><strong>UX/UI</strong></h2>
           </a>
         </li>
         <li class="card">
