--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -195,7 +195,7 @@
           <h2>
             <a href="https://zeplin.io/" target="_blank">Zeplin</a>
           </h2>
-          <p>Conexão entre Designers e Desenvolvedores <br> Outras Alternativas: Design Specs do Adobe XD | <marK><a href="https://avocode.com/" target="_blank">Avocode</a></marK></p>
+          <p>Conexão entre Designers e Desenvolvedores <br> Outras Alternativas: Design Specs do Adobe XD - <mark><a href="https://assets.adobe.com" target="_blank">Assets Adobe</a></mark> | <marK><a href="https://avocode.com/" target="_blank">Avocode</a></marK></p>
         </div>
         <a class="resource-button" href="https://zeplin.io/" target="_blank">Veja</a>
       </li>
