link do UIPatternHub

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -564,6 +564,21 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://uigradients.com" target="_blank">Veja</a>
       </li> 
       
+      <li>
+        <div class="resource-icon">
+          <a href="http://www.uipatternhub.com/" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/1027984508232978432/zHnV1u14_400x400.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://www.uipatternhub.com/" target="_blank">UIPatternHub</a>
+          </h2>
+          <p>Patterns</p>
+        </div>
+        <a class="resource-button" href="http://www.uipatternhub.com/" target="_blank">Veja</a>
+      </li>
+
     </ul>
       <ul class="sidebar-navigation">
               <li><a href="../apoio/index.html"><div class="circle"></div>Apoio</a></li>	
