correção de acento

--- a/cv/index.html
+++ b/cv/index.html
@@ -933,7 +933,7 @@
                   </p>
                 </a>
               </h3>                                           
-              <h4 class="espaco-prototipo">Este prototipo representa a sequência de telas para efetivar o pagamento de uma conta  <br> (Sendo assim outros botões estão sem funcionalidade)</h4>                                              
+              <h4 class="espaco-prototipo">Este protótipo representa a sequência de telas para efetivar o pagamento de uma conta  <br> (Sendo assim outros botões estão sem funcionalidade)</h4>                                              
             </div>
             <!--<p class="last">Texto</p>-->                                           
                                                   
