atualização de subtítulo

--- a/cv/index.html
+++ b/cv/index.html
@@ -56,7 +56,7 @@
           <div class="cv-section-title">
             <!--<img src="_content/140x140.png" alt="">-->
               <h1>Robson Vinicius de Oliveira
-                <small>Designer | Front End | Marketing | SEO | UX</small>
+                <small>Designer UI/UX | Front End | Marketing | SEO</small>
               </h1>
           </div>
           <!-- end section-title -->
