ajustando ícone mobile

--- a/cv/index.html
+++ b/cv/index.html
@@ -40,7 +40,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
        
   <!-- FontAwesome Icons 4.0.3 -->
-  <!-- <link rel="stylesheet" href="css/fontawesome/css/font-awesome.min.css"> -->
+  <link rel="stylesheet" href="css/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
         
   <!--  Modernizr -->
@@ -934,7 +934,7 @@
               <h3><strong>Bytebank | Prototipagem criada no Adobe XD</strong>
                 <a href="https://xd.adobe.com/view/36b8bc57-3fa7-4a43-6919-7055991716dd-4089/" target="_blank">
                   <p class="btn-portfolio">
-                    <i class="fa fa-mobile fa-3x" widht="42px" aria-hidden="true"></i>
+                    <i class="fas fa-mobile-alt fa-3x" aria-hidden="true"></i>
                   </p>
                 </a>
               </h3>                                           
@@ -1233,7 +1233,7 @@
     <!-- </div>-->
     <!-- end #wrap -->
     <a id="back-to-top" href="#">
-      <i class="fa fa-angle-up"></i>
+      <i class="fas fa-angle-double-up"></i>
     </a>
     <!--<a id="print" href="javascript:window.print()" title="Print the CV">
       <i class="fa fa-print"></i>
