ajuses nos ícones

--- a/cv/index.html
+++ b/cv/index.html
@@ -1223,7 +1223,7 @@
           <div class="span12"> -->
             <!-- end .cv-contact -->
             <div>
-              <h4 class="copyright">&copy; Robson Vinicius | 2017 <span class="hidden-phone"></span></h4>
+              <h4 class="copyright">&copy; Robson Vinicius | 2018 <span class="hidden-phone"></span></h4>
             </div>
             <!-- end .span12 -->
           <!--</div> -->
@@ -1233,12 +1233,13 @@
     <!-- </div>-->
     <!-- end #wrap -->
     <a id="back-to-top" href="#">
-      <i class="fas fa-angle-double-up"></i>
+      <!-- <i class="fas fa-angle-double-up"></i> -->
+      <img class="icon-top" src="img/angle-up-solid.svg" alt="">
     </a>
     <!--<a id="print" href="javascript:window.print()" title="Print the CV">
       <i class="fa fa-print"></i>
     </a>-->
-    <a id="pdf" href="CV-Robson_Vinicius-Designer-Front-End-UX-SEO-Marketing_Janeiro2018.pdf" target="blank"	title="Download it as a .pdf">
+    <a id="pdf" href="CV-Robson_Vinicius-Designer-UI-UX-Front-End-SEO-Marketing_Agosto2018.pdf" target="blank"	title="Download it as a .pdf">
       <i class="fa fa-download"></i>
     </a>
 
