ajustes ícone topo 1

--- a/cv/index.html
+++ b/cv/index.html
@@ -1234,7 +1234,7 @@
     <!-- end #wrap -->
     <a id="back-to-top" href="#">
       <!-- <i class="fas fa-angle-double-up"></i> -->
-      <img class="icone-topo1" src="img/angle-up-solid.svg" alt="">
+      <img src="img/angle-up-solid.svg" class="icone-topo1" alt="">
     </a>
     <!--<a id="print" href="javascript:window.print()" title="Print the CV">
       <i class="fa fa-print"></i>
