ajustes experiência profissional

--- a/cv/index.html
+++ b/cv/index.html
@@ -200,7 +200,7 @@
         <div class="span9">
           <div class="cv-item">
             <p class="period">Junho 2015 - atualmente</p>
-            <h3><strong>Desenvolvedor Front End | Designer Gráfico | UX</strong></h3>
+            <h3><strong>Front End | Designer Gráfico | UI/UX</strong></h3>
             <h4>Freelancer</h4>
             <ul class="fill-circle">
               <li>Prototipação | Usabilidade | UX</li>
