--- a/my/paginas/ebooks/index.html
+++ b/my/paginas/ebooks/index.html
@@ -86,7 +86,7 @@
        <li>
           <div class="resource-icon">
             <a href="https://www.dropbox.com/s/8qz3ypn00jg9oz7/eBook_GuiaCompletodoGoogleAnalytics_-_RockContent.pdf?dl=0" target="_blank">
-              <img src="https://pbs.twimg.com/profile_images/684108027037925377/dquBz6Ep_400x400.png" alt="ebook logo inspiration" />
+              <img src="https://pbs.twimg.com/profile_images/1021848775885651968/cU74ahCn_400x400.jpg" alt="ebook logo inspiration" />
             </a>
           </div>
           <div class="resource-details">
@@ -206,7 +206,7 @@
        <li>
           <div class="resource-icon">
             <a href="https://rockcontent.com/guias-definitivos/?utm_content=57200291&utm_medium=social&utm_source=twitter" target="_blank">
-              <img src="https://pbs.twimg.com/profile_images/684108027037925377/dquBz6Ep_400x400.png" alt="ebook psicologia das cores" />
+              <img src="https://pbs.twimg.com/profile_images/1016741028131409925/yWjE-Iwh_400x400.jpg" alt="ebook psicologia das cores" />
             </a>
           </div>
           <div class="resource-details">
