Adicionando o link do blog da LeadLovers - Automação de Vendas

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -192,6 +192,21 @@
       <a class="resource-button" href="https://www.publicitarioscriativos.com/" target="_blank">Veja</a>
     </li>
 
+    <li>
+      <div class="resource-icon">
+        <a href="https://automacaodevendas.com/" target="_blank">
+          <img src="https://pbs.twimg.com/profile_images/837005524415692800/sr6AEMYt_400x400.jpg" alt="#" />
+        </a>
+      </div>
+      <div class="resource-details">
+        <h2>
+          <a href="https://automacaodevendas.com/" target="_blank">Automação de Vendas</a>
+        </h2>
+        <p>Blog | LeadLovers | <a href="https://twitter.com/ameseulead" target="_blank">Twitter LeadLovers</a> <br> Co-Fundador Fabio Verschoor <a href="https://twitter.com/fabioverschoor" target="_blank">Twitter</a></p>
+      </div>
+      <a class="resource-button" href="https://automacaodevendas.com/" target="_blank">Veja</a>
+    </li>
+
     <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Estudo</h2>        
     <div class="linha"></div>
