--- a/my/paginas/portfolios/index.html
+++ b/my/paginas/portfolios/index.html
@@ -251,6 +251,21 @@
                   </div>
                   <a class="resource-button" href="https://www.behance.net/valterbispo" target="_blank">Veja</a>
              </li>
+
+             <li>
+              <div class="resource-icon">
+                <a href="https://www.behance.net/kalinematt2d15" target="_blank">
+                  <img src="../../base/images/portfolios.jpg" alt="portfolio" />
+                </a>
+              </div>
+              <div class="resource-details">
+                <h2>
+                  <a href="https://www.behance.net/kalinematt2d15" target="_blank">Kaline Mattos Farias</a>
+                </h2>
+                <p>UI/UX Designer<br><a href="https://medium.com/@kalinemattos" target="_blank">Medium</a></p>
+              </div>
+              <a class="resource-button" href="https://www.behance.net/kalinematt2d15" target="_blank">Veja</a>
+         </li>
              
              <div id="fontes">
                 <div class="linha"></div>            
