link do site do Diego Carmona

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -202,7 +202,7 @@
         <h2>
           <a href="https://automacaodevendas.com/" target="_blank">Automação de Vendas</a>
         </h2>
-        <p>Blog | LeadLovers | <a href="https://twitter.com/ameseulead" target="_blank">Twitter LeadLovers</a> <br> Co-Fundador Fabio Verschoor <a href="https://twitter.com/fabioverschoor" target="_blank">Twitter</a></p>
+        <p>Blog | LeadLovers | <a href="https://twitter.com/ameseulead" target="_blank">Twitter LeadLovers</a> <br> Co-Fundador Fabio Verschoor <a href="https://twitter.com/fabioverschoor" target="_blank"style="padding: 3px; background-color: green; border-radius: 3px; color: white;">Twitter</a> <br> Co-Fundador Diego Carmona <a href="http://diegocarmona.com.br/" target="_blank"style="padding: 3px; background-color: yellow; border-radius: 3px;">Site</a> </p>
       </div>
       <a class="resource-button" href="https://automacaodevendas.com/" target="_blank">Veja</a>
     </li>
