link do blog Homem Máquina

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -295,6 +295,21 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://coletivoux.com/" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.homemmaquina.com.br/nosso-blog/" target="_blank">
+            <img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/83729e73cc2a18fe5735ce976c086d81/5C336588/t51.2885-19/s320x320/20184331_1338043859576342_2561288263612497920_a.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.homemmaquina.com.br/nosso-blog/" target="_blank">Homem Máquina</a>
+          </h2>
+          <p>Blog | <mark><a href="https://www.homemmaquina.com.br/design/o-que-e-affordance/" target="_blank">O que é Affordance</a></mark></p>
+        </div>
+        <a class="resource-button" href="https://www.homemmaquina.com.br/nosso-blog/" target="_blank">Veja</a>
+      </li>
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Blogs Internacionais</h2>
       <div class="linha"></div>
