links UI, Professor e Fontes

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -308,6 +308,20 @@
 
 			<li>
 				<div class="resource-icon">
+					<a href="https://betterwebtype.com/combining-fonts-guide" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="Canva Fonts Combinations" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://betterwebtype.com/combining-fonts-guide" target="_blank">Better Web Type</a> </h2>
+					<p>Combinações de fontes</p>
+				</div>
+				<a class="resource-button" href="https://betterwebtype.com/combining-fonts-guide" target="_blank">Veja</a>
+				<div id="cores"></div>
+			</li>
+
+			<li>
+				<div class="resource-icon">
 					<a href="ttp://www.cufonfonts.com/font/bariol-regular-2" target="_blank">
 						<img src="../../base/images/portfolios.jpg" alt="Canva Fonts Combinations" />
 					</a>
@@ -317,6 +331,20 @@
 					<p>Web fonts &amp; e download</p>
 				</div>
 				<a class="resource-button" href="http://www.cufonfonts.com/font/bariol-regular-2" target="_blank">Veja</a>
+				<div id="cores"></div>
+			</li>
+
+			<li>
+				<div class="resource-icon">
+					<a href="https://icons8.com/fonts/helvetica-neue/menlo" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="Canva Fonts Combinations" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://icons8.com/fonts/helvetica-neue/menlo" target="_blank">Fontes que as pessoas realmente usam</a> </h2>
+					<p>Fontes mais utilizadas</p>
+				</div>
+				<a class="resource-button" href="https://icons8.com/fonts/helvetica-neue/menlo" target="_blank">Veja</a>
 				<div id="cores"></div>
 			</li>
 
