--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -594,6 +594,38 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="http://www.uipatternhub.com/" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.interaction-design.org/literature/article/10-great-sites-for-ui-design-patterns" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/996054287984848900/hdyiM8n1_400x400.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.interaction-design.org/literature/article/10-great-sites-for-ui-design-patterns" target="_blank">10 Great Sites for UI Design Patterns</a>
+          </h2>
+          <p>Patterns</p>
+        </div>
+        <a class="resource-button" href="https://www.interaction-design.org/literature/article/10-great-sites-for-ui-design-patterns" target="_blank">Veja</a>
+      </li>
+<!-- 
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.interaction-design.org/literature/article/10-great-sites-for-ui-design-patterns" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/996054287984848900/hdyiM8n1_400x400.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.interaction-design.org/literature/article/10-great-sites-for-ui-design-patterns" target="_blank">10 Great Sites for UI Design Patterns</a>
+          </h2>
+          <p>Patterns</p>
+        </div>
+        <a class="resource-button" href="https://www.interaction-design.org/literature/article/10-great-sites-for-ui-design-patterns" target="_blank">Veja</a>
+      </li> -->
+      
+     
+
     </ul>
       <ul class="sidebar-navigation">
               <li><a href="../apoio/index.html"><div class="circle"></div>Apoio</a></li>	
