Link do nucleoapp

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -704,6 +704,22 @@
         <div id="documentacao"></div>
       </li>  
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://nucleoapp.com/" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/884323684630056960/skkiGQPr_400x400.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://nucleoapp.com/" target="_blank">Nucleoapp</a>
+          </h2>
+          <p>Icon Organizer & Icon Library</p>
+        </div>
+        <a class="resource-button" href="https://nucleoapp.com/" target="_blank">Veja</a>
+        <div id="documentacao"></div>
+      </li>  
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Documentações</h2>
       <div class="linha"></div>
