Testando icon nucleoapp linkando do Facebook

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -707,7 +707,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://nucleoapp.com/" target="_blank">
-            <img src="https://pbs.twimg.com/profile_images/884323684630056960/skkiGQPr_400x400.jpg" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/17759967_1242890822497106_1662123643343366018_n.png?_nc_cat=0&oh=ee1b929a41a8f7ea70ff2bebe0e55f03&oe=5BFC99BB" alt="#" />
           </a>
         </div>
         <div class="resource-details">
