atualização da imagem do Material Design

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -33,7 +33,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://material.io/design/" target="_blank">
-            <img src="https://pbs.twimg.com/profile_images/925576484122779648/ucVTUoPg_400x400.jpg" alt="#" />
+            <img src="https://lh3.googleusercontent.com/-99RMkL32yk8/AAAAAAAAAAI/AAAAAAAAL-M/CPFuaTZlRj8/s60-p-no-il/photo.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
