--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -128,7 +128,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.strawpoll.me/" target="_blank">
-            <img src="https://pbs.twimg.com/profile_images/737742455643070465/yNKcnrSA_400x400.jpg" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/13307433_1115499378510722_2943287756945467912_n.png?_nc_cat=0&oh=d09baf03d4731d0cfe26e954b8171ae1&oe=5BEDC6BD" alt="#" />
           </a>
         </div>
         <div class="resource-details">
