atualizacao da imagem do Awwwards

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -173,7 +173,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.awwwards.com/websites/" target="_blank">
-            <img src="https://pbs.twimg.com/profile_images/994433954538176512/9w1IQjMM_400x400.jpg" alt="#" />
+            <img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/85bacf2d10be0985c046a42950564961/5C332CA5/t51.2885-19/s150x150/31714420_832450760278142_4302607574668148736_n.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
