atualizacao da imagem do Zeplin

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -188,7 +188,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://zeplin.io/" target="_blank">
-            <img src="https://pbs.twimg.com/profile_images/926163770497384448/ebRtDqs2_400x400.jpg" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/11796311_417326238477451_4522575293430406773_n.png?_nc_cat=0&oh=24a899ea27fc55e0a6a4e232a9114f90&oe=5BF8302F" alt="#" />
           </a>
         </div>
         <div class="resource-details">
