atualizacao da imagem do Protopie

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -203,7 +203,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.protopie.io/" target="_blank">
-            <img src="https://pbs.twimg.com/profile_images/809333064459370496/8gIIkoHj_400x400.jpg" alt="#" />
+            <img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/267fc1197247372875d871b9d1f7e976/5C388067/t51.2885-19/s150x150/12750253_993533700720458_1942091324_a.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
