atualizacao da imagem do Envatotuts+

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -473,7 +473,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://webdesign.tutsplus.com/pt/tutorials/how-to-create-a-ui-prototype-using-adobe-xd--cms-26585" target="_blank">
-            <img src="https://pbs.twimg.com/profile_images/671588461833560064/oi7JDvPR_400x400.png" alt="#" />
+            <img src="https://lh3.googleusercontent.com/-2rvOAn59yH4/AAAAAAAAAAI/AAAAAAAAFTg/vJUrAydmKYE/s60-p-no-il/photo.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
